handle btn click login & edit layout login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:text="Travel Assistant"
-        android:textColor="#068f41"
-        android:textSize="30sp" />
+        android:textColor="@color/colorCustomPrimary"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
 
         <EditText
@@ -91,7 +94,7 @@
             android:padding="15dp"
             android:textAllCaps="false"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:background="@drawable/fb_login_btn_bg"
             android:textColor="#ffffff"
             android:text="Đăng nhập bằng Facebook" />
@@ -106,7 +109,7 @@
             android:textColor="#ffffff"
             android:background="@drawable/gg_login_btn_bg"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textAllCaps="false"
             android:text="Đăng nhập bằng Google" />
     </LinearLayout>
