fix bug ImageView in fragment_home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/ic_search_black_24dp"
+            app:srcCompat="@drawable/ic_search_black_24dp"
             />
         <EditText
             android:layout_width="0dp"
@@ -27,7 +27,6 @@
             android:hint="Tìm kiếm ..."
             android:textSize="18sp"
             android:padding="10dp"
-            android:focusedByDefault="false"
             />
 
     </LinearLayout>
@@ -36,5 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:background="#ffffff"/>
+        android:background="#ffffff"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
 </LinearLayout>
