--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,35 @@
             />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_hiking_solid" />
+
+        <TextView
+            android:textSize = "19sp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:text="100 trips"
+            android:id="@+id/edt_totalTour"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <TextView
+        android:background="#228811"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
     <ListView
         android:id="@+id/listview_tour"
         android:layout_width="match_parent"
