--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -20,7 +21,7 @@
             app:srcCompat="@drawable/ic_search_black_24dp"
             />
         <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#ffffff"
@@ -31,33 +32,43 @@
 
     </LinearLayout>
 
+    <TextView
+        android:background="#DBE7CF"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
     <LinearLayout
         android:padding="10dp"
-        android:background="#fff"
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_marginLeft="5dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:srcCompat="@drawable/ic_hiking_solid" />
+            app:srcCompat="@drawable/ic_trekking" />
 
         <TextView
-            android:textSize = "19sp"
-            android:paddingLeft="10dp"
-            android:textStyle="bold"
-            android:text="100 trips"
             android:id="@+id/edt_totalTour"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="100 trips"
+            android:textSize="19sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginBottom="20dp"
         android:background="#228811"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="0.5dp"/>
 
     <ListView
         android:id="@+id/listview_tour"
