--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,11 +21,12 @@
             app:srcCompat="@drawable/ic_search_black_24dp"
             />
         <EditText
+            android:id="@+id/home_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#ffffff"
-            android:hint="Tìm kiếm ..."
+            android:hint="Tìm kiếm theo tên tour ..."
             android:textSize="18sp"
             android:padding="10dp"
             />
@@ -53,13 +54,27 @@
             app:srcCompat="@drawable/ic_trekking" />
 
         <TextView
+            android:layout_marginLeft="10dp"
+            android:text="Toàn bộ: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:textColor="#4CAF50"
+            android:paddingTop="5dp"
             android:id="@+id/edt_totalTour"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
-            android:text="100 trips"
+            android:paddingRight="10dp"
+            android:text="100"
             android:textSize="19sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:text=" tour du lịch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <TextView
