--- a/app/src/main/res/layout/listview_tour_item.xml
+++ b/app/src/main/res/layout/listview_tour_item.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:background="#fff"
     android:orientation="vertical"
-    android:paddingLeft="15dp"
-    android:paddingTop="25dp"
-    android:paddingRight="15dp"
-    android:paddingBottom="25dp">
+    android:paddingLeft="20dp"
+    android:paddingTop="30dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="30dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,12 +27,14 @@
             android:src="@drawable/empty_image" />
 
         <LinearLayout
+            android:weightSum="2"
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_weight="6"
+                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -42,11 +44,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal"
-                    android:paddingLeft="10dp">
+                    >
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="25dp"
+                        android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_maps_and_flags" />
 
                     <TextView
@@ -55,9 +57,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
-                        android:paddingTop="2dp"
+                        android:paddingTop="3dp"
                         android:text="Tour Name"
-                        android:textSize="23sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
 
@@ -65,11 +67,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp">
+                    android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="30dp"
+                        android:layout_width="25dp"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_multiple_users_silhouette" />
 
@@ -80,7 +81,15 @@
                         android:paddingLeft="10dp"
                         android:paddingTop="4dp"
                         android:text="0 adult(s)"
-                        android:textSize="18sp" />
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="4dp"
+                        android:text = "&amp;"
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/tv_childs"
@@ -89,16 +98,19 @@
                         android:paddingLeft="10dp"
                         android:paddingTop="4dp"
                         android:text="0 child(s)"
-                        android:textSize="18sp" />
+                        android:textSize="15sp" />
 
                 </LinearLayout>
             </LinearLayout>
 
             <ImageButton
-                android:layout_width="31dp"
-                android:layout_height="34dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
                 android:background="#fff"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/ic_clone_regular" />
 
@@ -112,12 +124,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:paddingLeft="15dp">
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="30dp"
-                android:layout_marginRight="6dp"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_money_bag" />
 
             <TextView
@@ -129,17 +140,17 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Min Cost"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <TextView
-                android:textStyle="bold"
-                android:textColor="#8BC34A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
-                android:text=" - "
-                android:textSize="18sp" />
+                android:text="-"
+                android:textColor="#8BC34A"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:textStyle="bold"
@@ -150,7 +161,7 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Max Cost"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -158,11 +169,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:paddingLeft="15dp">
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_calendar" />
 
             <TextView
@@ -173,7 +184,7 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="Start Date"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:textStyle="italic"
@@ -181,8 +192,8 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
-                android:text=" - "
-                android:textSize="18sp" />
+                android:text="-"
+                android:textSize="15sp" />
 
             <TextView
                 android:textStyle="italic"
@@ -192,7 +203,7 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="4dp"
                 android:text="End Date"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
 
