disable login by google

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,11 +40,12 @@
         android:layout_height="10dp"/>
 
     <LinearLayout
-        android:padding="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -61,7 +62,6 @@
 
         <TextView
             android:textColor="#4CAF50"
-            android:paddingTop="5dp"
             android:id="@+id/edt_totalTour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,7 +80,6 @@
     <TextView
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginBottom="20dp"
         android:background="#228811"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"/>
@@ -92,5 +91,6 @@
         android:layout_marginTop="5dp"
         android:background="#ffffff"
         android:divider="@null"
-        android:dividerHeight="0dp"/>
+        android:dividerHeight="0dp"
+        />
 </LinearLayout>
