--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,96 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ffffff"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <include layout="@layout/fragment_home_without_btnadd" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="10dp"
+        android:id="@+id/btn_add_tour"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#ffffff"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:focusableInTouchMode="true"
-        >
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/ic_search_black_24dp"
-            />
-        <EditText
-            android:id="@+id/home_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#ffffff"
-            android:hint="Tìm kiếm theo tên tour ..."
-            android:textSize="18sp"
-            android:padding="10dp"
-            />
+        android:layout_gravity="bottom|end"
+        app:maxImageSize="56dp"
+        app:srcCompat="@drawable/ic_plus" />
 
-    </LinearLayout>
-
-    <TextView
-        android:background="#DBE7CF"
-        android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"/>
-
-    <LinearLayout
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp"
-        android:background="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_marginLeft="5dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:srcCompat="@drawable/ic_trekking" />
-
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:text="Toàn bộ: "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:textColor="#4CAF50"
-            android:id="@+id/edt_totalTour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="100"
-            android:textSize="19sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:text=" tour du lịch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-    <TextView
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:background="#228811"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"/>
-
-    <ListView
-        android:id="@+id/listview_tour"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:background="#ffffff"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        />
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
