use sharedpreferences to save token

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -94,6 +94,7 @@
                 android:background="@drawable/roundedborder2"
                 android:hint="Ngày tháng năm sinh"
                 android:inputType="date"
+                android:focusableInTouchMode="false"
                 android:padding="15dp" />
 
             <TextView
